# ClineClaudeMCPTesting

./: .clinerules  .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup_env.bat
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check_file_size.py  generate_playlist.py  generate_test_audio.py  generate_test_video.py
src/: __init__.py  config.py  prototype.py
src/audio/: __init__.py
src/utils/: __init__.py
src/video/: __init__.py  clip_manager.py  ffmpeg_wrapper.py  transition_handler.py  video_generator.py
tests/: test_audio.py  test_ffmpeg_commands.py  test_ffmpeg_wrapper.py  test_overlay.py  test_performance.py  test_video_generator.py
